# janus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BENCHMARKING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Dockerfile  JANUS_FUTURE.md  JANUS_ROADMAP.md  JANUS_V2_ROADMAP.md  JANUS_V3_ROADMAP.md  JANUS_V4_ROADMAP.md  JANUS_V5_ROADMAP.md  LICENSE  QA_MANUAL_TEST_PLAN.md  README.md  SECURITY.md  VELOX_FUTURE.md  VELOX_ROADMAP.md  VELOX_V2_ROADMAP.md  VELOX_V3_ROADMAP.md  VELOX_V4_ROADMAP.md  VELOX_V5_ROADMAP.md  build.rs  docker-compose.yml  janus.toml.example  railway.json  rust-toolchain.toml  velox.toml.example
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
.github/: .gitkeep  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-0de7941165ca91c11b1d0be089afa090bb480eecb850c2c2ecca55e4806fccf8.json  query-19930f7a07fda935f92376dc8e2404e679b9af3b3b33d0db1e54b2275b8a2ef5.json  query-20e3d95c12f658d7a1b33a19d17701a07b17feb81fc4e8b5d943242601af3d28.json  query-24dfe26e3f830e747c153ca9354fdea1a6b49a730db7ec663d483560b9b718f4.json  query-3c7ff60bb7984c76801f00e17ef6f78b7378cb77e11188e8bda03eb39ff024de.json  query-473a0a7f1520276f19a972f08ed6fd9e50ba442edebb8d6e0fe27a53af938eb1.json  query-61004c0994c1cbf27e6b040a6117b7e13c2e138db9698517bc0ce1c53842b110.json  query-75ed16bb71f9b21d4d116477976966104dacb506c65c24a3893c3fd4c8e0c545.json  query-7dd04adf6e9f7a65a95bff19613ff65df1f3baf97f5aec5d83b6dea9351bc991.json  query-aa822b27331a2939115addc502c0b49fb50f342b32790f61dde00c37436ab594.json  query-d25da9ac47e290d15a0b32d0c6f57363719b4d95900c288c8b13f842103bfdb4.json
benches/: cache_bench.rs  concurrent.rs  request_pipeline.rs  streaming.rs
benchmarks/: .gitignore  CHAPTER0_concepts.md  CHAPTER1_mock_llm.md  CHAPTER2_profiles.md  CHAPTER3_seed.md  CHAPTER4_running.md  CHAPTER5_reading_results.md  README.md  bench-overhead-probe.sh  ec2-setup.sh  mixed-workload.sh  run-all-cloud.sh  run.sh  sample-proc.sh  seed.sh
benchmarks/mock-llm/: Cargo.toml
benchmarks/mock-llm/src/: main.rs
benchmarks/profiles/: cache-warm.json  chat-long.json  mixed-miss.json  pure-overhead.json  smart-routing.json  tools.json
charts/janus/: Chart.yaml  values.yaml
charts/velox/: Chart.yaml  values.yaml
dashboard/: next.config.ts  package-lock.json  package.json
deploy/fly/: README.md  fly.toml
deploy/railway/: README.md  railway.json
deploy/render/: README.md  render.yaml
infra/aws/: .gitignore  buildspec.yml  cloudfront.tf  codebuild.tf  main.tf  outputs.tf  providers.tf  user_data.sh.tpl  variables.tf
migrations/: 0001_create_users.sql  0002_create_workspaces.sql  0003_create_api_keys.sql  0004_create_providers.sql  0005_create_model_pricing.sql  0006_create_requests.sql  0007_create_cache.sql  0008_create_daily_costs.sql  0009_create_alerts.sql  0010_add_api_key_sha256.sql  0011_seed_additional_providers.sql  0012_add_alerts_webhook.sql  0013_alert_history.sql  0014_add_request_type.sql  0015_add_routing_strategy.sql  0016_create_prompts.sql  0017_distributed_rate_limit.sql  0018_add_key_rotation.sql  0019_provider_base_url.sql  0020_cache_ttl.sql  0021_budget_downgrade.sql  0022_provider_quality_score.sql  0023_request_replay.sql  0024_rbac.sql  0025_update_model_pricing.sql  0026_fix_model_pricing.sql  0027_api_expansion.sql  0028_oidc.sql  0029_request_tags.sql  0030_alert_channels.sql  0031_user_tour.sql  0032_smart_routing.sql  0033_audit_log.sql  0034_fix_model_scores.sql  0035_model_pricing_chat_flag.sql
migrations/sqlite/: 0001_create_users.sql  0002_create_workspaces.sql  0003_create_api_keys.sql  0004_create_providers.sql  0005_create_model_pricing.sql  0006_create_requests.sql  0007_create_cache.sql  0008_create_daily_costs.sql  0009_create_alerts.sql  0010_add_api_key_sha256.sql  0011_seed_additional_providers.sql  0012_add_alerts_webhook.sql  0013_alert_history.sql  0014_add_request_type.sql  0015_add_routing_strategy.sql  0016_create_prompts.sql  0017_distributed_rate_limit.sql  0018_add_key_rotation.sql  0019_provider_base_url.sql  0020_cache_ttl.sql  0021_budget_downgrade.sql  0022_provider_quality_score.sql  0023_request_replay.sql  0024_rbac.sql  0027_api_expansion.sql  0028_oidc.sql  0029_request_tags.sql  0030_alert_channels.sql  0031_user_tour.sql  0032_smart_routing.sql  0033_audit_log.sql  0035_model_pricing_chat_flag.sql
src/: config.rs  crypto.rs  dashboard.rs  demo.rs  doctor.rs  errors.rs  lib.rs  main.rs  metrics.rs  openapi.rs  pii.rs  state.rs  telemetry.rs
src/alerts/: email.rs  mod.rs  slack.rs  webhook.rs
src/analytics/: mod.rs  quality_score.rs
src/audit/: mod.rs
src/auth/: oidc.rs
src/cache/: embedding.rs  exact.rs  mod.rs  policy.rs  semantic.rs  time_guard.rs
src/cli/: admin_client.rs  backup.rs  config.rs  import.rs  keys.rs  migrate.rs  mod.rs
src/cluster/: key_sync.rs  mod.rs  rate_limit.rs
src/db/: alerts.rs  analytics.rs  api_keys.rs  audit.rs  cache.rs  identities.rs  mod.rs  pool.rs  prompts.rs  providers.rs  rbac.rs  requests.rs  smart_routing.rs  users.rs
src/enterprise/: license.rs  mod.rs  real.rs
src/gateway/: circuit_breaker.rs  dedup.rs  mod.rs  pipeline.rs  router.rs  smart_router.rs  tool_extract.rs
src/handlers/: auth.rs  gateway.rs  (+5 more)
tests/: enterprise_audit.rs  first_run_setup.rs  multi_model.rs  phase0_foundation.rs  phase1_proxy.rs  phase2_streaming.rs  phase3_reliability.rs  phase4_exact_cache.rs  phase5_semantic_cache.rs  v2_0_spec_completion.rs  v2_1_sqlite.rs  v2_2_webhooks.rs  v2_3_api_compat.rs  v2_4_routing.rs  v2_5_prompts.rs  v2_6_clustering.rs  v2_7_mcp.rs  v3_0_fixes.rs  v3_1_semantic_cache.rs  v3_2_otel.rs  v3_3_streaming.rs  v3_4_plugins.rs  v3_5_security.rs  v4_0_foundation.rs  v4_2_dedup.rs  v4_3_cache_ttl.rs  v4_4_budget_downgrade.rs  v4_5_cost_sim.rs  v4_6_replay.rs  v4_8_rbac.rs  v4_9_vector_store.rs  v5_0_api_expansion.rs  v5_1_cli.rs  v5_1_openapi.rs  v5_2_migration_imports.rs  v5_l2_oidc.rs  v5_l3_cost_tags.rs  v5_l4_alerts.rs  v5_l5_onboarding.rs  v5_l6_smart_routing.rs
(+142 files in other folders)
