[package]
name = "velox"
version = "0.1.0"
edition = "2021"
description = "Self-hosted AI gateway — proxy, caching, observability"
license = "MIT"

# ─── Core (present from project start) ────────────────────────────────────────
[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"

# ─── Phase 0: Foundation ───────────────────────────────────────────────────────
config = "0.14"
clap = { version = "4", features = ["derive"] }
rust_decimal = { version = "1", features = ["db-postgres"] }

# ─── Phase 1: Core Proxy (uncomment when starting Phase 1) ────────────────────
# reqwest = { version = "0.12", features = ["json", "stream"] }
# dashmap = "6"
# sha2 = "0.10"
# aes-gcm = "0.10"
# tiktoken-rs = "0.6"
# aws-config = { version = "1", features = ["behavior-version-latest"] }
# aws-sdk-bedrockruntime = "1"
# async-trait = "0.1"
# futures = "0.3"
# futures-util = "0.3"
# bytes = "1"

# ─── Phase 2: Streaming (uncomment when starting Phase 2) ─────────────────────
# eventsource-stream = "0.2"
# tokio-stream = { version = "0.1", features = ["sync"] }

# ─── Phase 5: Semantic Cache (uncomment when starting Phase 5) ────────────────
# ort = { version = "2", features = ["download-binaries"] }
# instant-distance = "0.6"

# ─── Phase 6: Dashboard (uncomment when starting Phase 6) ─────────────────────
# include_dir = "0.7"

# ─── Dev / Test Dependencies ───────────────────────────────────────────────────
[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
# reqwest is needed in test files even before Phase 1 (test code imports it)
reqwest = { version = "0.12", features = ["json"] }
