[package]
name = "janus"
version = "0.3.0"
edition = "2021"
description = "Self-hosted AI gateway — proxy, caching, observability"
license = "BUSL-1.1"
repository = "https://github.com/Janus-admin/janus"
homepage = "https://github.com/Janus-admin/janus"

# ─── Feature flags ─────────────────────────────────────────────────────────────
# Use exactly one at a time:
#   cargo build                          → postgres (production default)
#   cargo build --no-default-features --features sqlite  → sqlite (zero-dependency)
[features]
default = ["postgres"]
postgres    = ["sqlx/postgres", "rust_decimal/db-postgres"]
sqlite      = ["sqlx/sqlite", "sqlx/any"]
# Enterprise edition: SOC2 audit log, license validation, policy engine stub.
# Build with: cargo build --release --features enterprise
enterprise  = []

# ─── Core (present from project start) ────────────────────────────────────────
[dependencies]
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "uuid", "chrono", "macros", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"

# ─── Phase 0: Foundation ───────────────────────────────────────────────────────
config = "0.14"
clap = { version = "4", features = ["derive", "env"] }
rust_decimal = { version = "1", features = ["serde-float"] }

# ─── Phase 1: Core Proxy ──────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
dashmap = "6"
sha2 = "0.10"
aes-gcm = "0.10"
tiktoken-rs = "0.6"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
bytes = "1"
rand = "0.8"

# ─── Phase 2: Streaming ────────────────────────────────────────────────────────
eventsource-stream = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }

# ─── V3-3: Streaming Hardening ─────────────────────────────────────────────────
# tokio-util was a transitive dep; declare it explicitly for stability.
tokio-util = "0.7"

# ─── Phase 5: Semantic Cache ──────────────────────────────────────────────────
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.19"

# ─── V3-1: HNSW Semantic Cache ────────────────────────────────────────────────
hnsw_rs = "0.3"

# ─── V3-2: OpenTelemetry ──────────────────────────────────────────────────────
opentelemetry         = { version = "0.23", features = ["trace"] }
opentelemetry_sdk     = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.16", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.24"

# ─── Phase 6: Dashboard ───────────────────────────────────────────────────────
include_dir = "0.7"

# ─── Phase 7: Production Hardening ─────────────────────────────────────────────
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
regex = "1"

# ─── V4-9: External Vector Stores (Qdrant) ────────────────────────────────────
qdrant-client = "1.9"

# ─── V2-2: Webhook Alerts ─────────────────────────────────────────────────────
hmac = "0.12"

# ─── V5-1: OpenAPI / Swagger UI ───────────────────────────────────────────────
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
toml = "0.8"

# ─── V5-2: Deployment & Migration Tooling ─────────────────────────────────────
# Importers parse LiteLLM YAML (serde_yaml) and pack/unpack backup archives
# (tar + flate2 gz). serde_json already covers Portkey + OpenRouter shapes.
serde_yaml = "0.9"
tar = "0.4"
flate2 = "1"

# ─── V5-L2: OIDC Login ────────────────────────────────────────────────────────
# OIDC flow is implemented manually using reqwest (already present) +
# jsonwebtoken (already present) for JWT validation. base64 is needed for
# PKCE S256 challenge generation (URL-safe, no-padding encoding of SHA-256 hash).
base64 = "0.22"

# ─── V5-L4: Polished Alerts (Slack + Email) ───────────────────────────────────
# lettre: SMTP email delivery + file-transport for test-mode (writes .eml files).
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "file-transport", "builder"] }

# ─── Enterprise: open-core boundary ──────────────────────────────────────────
# arc-swap: wait-free atomic pointer swap for hot-path policy reads.
arc-swap = "1"

# ─── Dev / Test Dependencies ───────────────────────────────────────────────────
[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
# reqwest is needed in test files even before Phase 1 (test code imports it)
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
# V3-2: enable in-memory span exporter for tests
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "testing"] }
# V5-L2: RSA key generation for mock OIDC ID tokens in tests
rsa = { version = "0.9", features = ["pem"] }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "request_pipeline"
harness = false

[[bench]]
name = "streaming"
harness = false

[[bench]]
name = "concurrent"
harness = false
