[package]
name = "mock-llm"
version = "0.1.0"
edition = "2021"
publish = false
description = "Constant-latency OpenAI-compatible mock for benchmarking Janus."
license = "Elastic-2.0"

# Kept as a standalone Cargo project (not a workspace member) so that:
#   - The main `janus` build is unaffected when this folder is absent.
#   - Anyone can `cargo run --manifest-path benchmarks/mock-llm/Cargo.toml`.
#   - The mock can be cross-built and shipped as a tiny static binary if needed.

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "net"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Used by the streaming branch — `async_stream::stream!` lets us inline sleep()
# calls between yield points, which is the clearest way to express timing.
async-stream = "0.3"
futures-core = "0.3"

[profile.release]
# Optimise for predictable latency, not throughput.
# `lto = "fat"` is deliberately off — we want consistent timings, not the
# absolute fastest binary. LTO can introduce per-run timing variance.
opt-level = 3
codegen-units = 1
debug = false
strip = true
